# Yugo-accommodation-Project

./: .gitignore  Procfile  consumer.py  manage.py  producer.py  queue_setup.py  requirements.txt
.ebextensions/: django.config
accommodation/: .~c9_invoke_1qN3dY.py  admin.py  apps.py  dynamodb_client.py  forms.py  lambda_client.py  models.py  s3_utils.py  signals.py  urls.py  views.py
accommodation/migrations/: 0001_initial.py  0002_remove_room_s3_url_alter_room_image_booking.py  0003_room_s3_url_alter_booking_check_in_and_more.py
accommodation/templates/accommodation/: base.html  book_room.html  booking_success.html  cancel_booking_confirm.html  delete_booking_confirm.html  edit_booking.html  home.html  login.html  manager_next_ticket.html  manager_room_image.html  manager_room_list.html  my_bookings.html  signup.html  support_ticket_form.html  support_ticket_success.html
yugo_booking_lib_project/: README.md  pyproject.toml
yugo_booking_lib_project/src/yugo_booking_lib/: __init__.py  booking_price.py
yugo_site/: asgi.py  settings.py  urls.py  wsgi.py
